--- a/html/balls/live.html
+++ b/html/balls/live.html
@@ -232,19 +232,19 @@
             <div class="logo">LOGO</div>
             <!--上列表-->
             <ul class="headerlist">
-                <li><a href="javascript:;">市場列表</a></li>
+                <li><a href="./soccer.html">市場列表</a></li>
                 <li><a class="active" href="./live.html">直播</a></li>
-                <li><a href="javascript:;">比賽結果</a></li>
-                <li><a href="javascript:;">盤口教程</a></li>
+                <li><a href="./result.html">比賽結果</a></li>
+                <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
-                <li><a href="javascript:;"><i class="fas fa-user"></i></i>我的</a></li>
+                <li><a href="../myself/mine.html"><i class="fas fa-user"></i></i>我的</a></li>
             </ul>
             <!--登入後樣式-->
             <div class="loggedIn display">
 				<p>帳戶名稱:<span>AAA888</span></p>
                 <p class="quota">昨日信用額度:<span>1000000</span>元</p>
                 <p class="quota">今日信用額度:<span>1000000</span>元</p>
-                <button class="logoutBtn" onclick="window.location.href='./index.html'">登出</button>
+                <button class="logoutBtn" onclick="window.location.href='../../index.html'">登出</button>
                 <div class="selectBox">
                     <i class="fas fa-globe"></i>
                     <select name="" id="">
@@ -426,8 +426,198 @@
                 </ul>
             </section>
             <!--直播-->
-            <section class="middle">
-                
+            <section class="middle live">
+                <div class="liveExpansion">
+                    <div class="liveShowBar">
+                      <p>視訊直播</p>
+                      <div>
+                        <button class="active"></button>
+                        <button></button>
+                      </div>
+                    </div>
+                    <div class="liveShowBox one">
+                      <div class="videoContainer">
+                        <video src="https://v.moele.me/v/14867/14857138_a-01.webm"></video>
+                        <div class="close"></div>
+                      </div>
+                      <div class="videoContainer">
+                        <video src="https://v.moele.me/v/14867/14857138_a-01.webm"></video>
+                        <div class="close"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="liveBettingBox one">
+                    <table class="playBoard oldP tType1_2">
+                      <tr>
+                        <th class="tLeft">主客隊</th>
+                        <th>犯規數</th>
+                        <th>比分</th>
+                        <th>獨贏</th>
+                        <th>讓球</th>
+                        <th>大小</th>
+                        <th>上半讓球</th>
+                        <th>上半大小</th>
+                        <th></th>
+                      </tr>
+                      <tr>
+                        <td class="tLeft">
+                          <p>巴黎聖日耳曼</p>
+                          <p>巴塞羅納</p>
+                          <p>
+                            <span class="gameStyle">滾球</span>
+                            <span class="gameTime">1H 32:15</span>
+                          </p>
+                        </td>
+                        <td>
+                          <div>
+                            <p class="redCard">
+                              <span></span>
+                              0
+                            </p>
+                            <p class="yellowCard">
+                              <span></span>
+                              0
+                            </p>
+                          </div>
+                          <div>
+                            <p>&ensp;</p>
+                          </div>
+                        </td>
+                        <td>
+                          <p>0</p>
+                          <p>0</p>
+                          <p>&ensp;</p>
+                        </td>
+                        <td>
+                          <button class="third">
+                            <span>主</span>
+                            000.987
+                          </button>
+                          <button class="third">
+                            <span>和</span>
+                            000.98
+                          </button>
+                          <button class="third">
+                            <span>客</span>
+                            000.9
+                          </button>
+                        </td>
+                        <td>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                        </td>
+                        <td>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                        </td>
+                        <td>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                        </td>
+                        <td>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                          <button>
+                            <span>1+50</span>
+                            000.987
+                          </button>
+                        </td>
+                        <td>
+                          <a href="javascript:;" class="tbimg2 love"></a>
+                          <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                        </td>
+                      </tr>
+                    </table>
+                    <table class="scoreBoard soccer">
+                      <tr>
+                          <th class="tLeft">主客隊</th>
+                          <th>犯規數</th>
+                          <th>全場</th>
+                          <th>犯規數</th>
+                          <th>半場</th>
+                      </tr>
+                      <tr>
+                          <td class="tLeft">
+                              <p>
+                                  <span class="mainTeam">主</span>
+                                  烏法足球俱樂部青年
+                              </p>
+                          </td>
+                          <td>
+                              <p class="redCard">
+                                  <span></span>
+                                  0
+                              </p>
+                              <p class="yellowCard">
+                                  <span></span>
+                                  0
+                              </p>
+                          </td>
+                          <td>0</td>
+                          <td>
+                              <p class="redCard">
+                                  <span></span>
+                                  0
+                              </p>
+                              <p class="yellowCard">
+                                  <span></span>
+                                  0
+                              </p>
+                          </td>
+                          <td>0</td>
+                      </tr>
+                      <tr>
+                          <td class="tLeft">
+                              <p>
+                                  <span class="customTeam">客</span>
+                                  斯特羅吉諾足球俱樂部青年
+                              </p>
+                          </td>
+                          <td>
+                              <p class="redCard">
+                                  <span></span>
+                                  0
+                              </p>
+                              <p class="yellowCard">
+                                  <span></span>
+                                  0
+                              </p>
+                          </td>
+                          <td>0</td>
+                          <td>
+                              <p class="redCard">
+                                  <span></span>
+                                  0
+                              </p>
+                              <p class="yellowCard">
+                                  <span></span>
+                                  0
+                              </p>
+                          </td>
+                          <td>0</td>
+                      </tr>
+                    </table>
+                  </div>
             </section>
             <!--右列-->
             <section class="right">
