--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li class="cantUse"><a href="javascript:;">市場列表</a></li>
-                <li class="cantUse"><a href="./html/balls/live.html">直播</a></li>
+                <li class="cantUse"><a href="javascript:;">直播</a></li>
                 <li class="cantUse"><a href="javascript:;">比賽結果</a></li>
                 <li class="cantUse"><a href="javascript:;">盤口教程</a></li>
                 <li><a href="./index.html" class="active">比分</a></li>
