--- a/html/leftbtn/withdrawl.html
+++ b/html/leftbtn/withdrawl.html
@@ -325,7 +325,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="../balls/soccer.html">市場列表</a></li>
-                <li><a href="./live.html">直播</a></li>
+                <li><a href="../balls/live.html">直播</a></li>
                 <li><a href="../balls/result.html">比賽結果</a></li>
                 <li><a href="../balls/teach.html">盤口教程</a></li>
                 <li><a href="#">盤口教程</a></li>
