--- a/html/balls/live.html
+++ b/html/balls/live.html
@@ -8,7 +8,7 @@
     <title>直播</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../../js/javascript.js"></script>
-    <link class="indexStyle" rel="stylesheet" href="../../css_5/style.css">
+    <link class="elseStyle" rel="stylesheet" href="../../css_5/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
@@ -548,7 +548,7 @@
                         </td>
                       </tr>
                     </table>
-                    <table class="scoreBoard soccer">
+                    <table class="scoreBoard soccer live">
                       <tr>
                           <th class="tLeft">主客隊</th>
                           <th>犯規數</th>
