--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                 <li class="cantUse"><a href="javascript:;">比賽結果</a></li>
                 <li class="cantUse"><a href="javascript:;">盤口教程</a></li>
                 <li><a href="./index.html" class="active">比分</a></li>
+                <li class="cantUse"><a href="javascript:;">即時注單</a></li>
+                <li class="cantUse"><a href="javascript:;">投注紀錄</a></li>
+                <li class="cantUse"><a href="javascript:;">相關規則</a></li>
                 <li class="cantUse"><a href="javascript:;"><i class="fas fa-user"></i></i>我的</a></li>
             </ul>
             <!--登入前樣式-->
