--- a/html/balls/teach.html
+++ b/html/balls/teach.html
@@ -239,6 +239,9 @@
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html" class="active">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
+                <li><a href="../myself/betting_now.html">即時投注</a></li>
+                <li><a href="../myself/betting_record.html">投注紀錄</a></li>
+                <li><a href="../myself/help.html">相關規則</a></li>
                 <li><a href="../myself/mine.html"><i class="fas fa-user"></i></i>我的</a></li>
             </ul>
             <!--登入前樣式-->
