--- a/html/leftbtn/transpoint.html
+++ b/html/leftbtn/transpoint.html
@@ -257,6 +257,9 @@
                 <li><a href="../balls/teach.html">盤口教程</a></li>
                 <li><a href="#">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
+                <li><a href="../myself/betting_now.html">即時投注</a></li>
+                <li><a href="../myself/betting_record.html">投注紀錄</a></li>
+                <li><a href="../myself/help.html">相關規則</a></li>
                 <li><a href="./mine.html" class="active"><i class="fas fa-user"></i></i>我的</a></li>
             </ul>
             <!--登入前樣式-->
