--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -712,12 +712,12 @@
                                 </button>
                             </td>
                             <td>
-                                <button><span>1+50</span>000.987</button>
+                                <button class="up"><span>1+50</span>000.987</button>
                                 <button><span>1+50</span>000.97</button>
                             </td>
                             <td>
                                 <button><span>高於3.0</span>000.987</button>
-                                <button><span>低於3.0</span>000.987</button>
+                                <button class="down"><span>低於3.0</span>000.987</button>
                             </td>
                             <td>
                                 <button><span>高於3.0</span>000.987</button>
